# nexusprism

./: .env.example  .gitignore  .vercelignore  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  environment.yml  global.d.ts  house-of-meena.html  next.config.ts  package-lock.json  package.json  pyproject.toml  skill.json  tsconfig.json  vercel-redeploy.txt
.claude-plugin/: marketplace.json  plugin.json
.claude/hooks/: session-start.sh
.claude/l/: README.md
.github/: copilot-instructions.md  pull_request_template.md
.github/workflows/: check-asset-sync.yml  claude-code-review.yml  claude.yml  python-package-conda.yml  release.yml  template-guard.yml  test.yml  validation.yml
agents/: data-analyst-session.ts  data-analyst-setup.ts
bashir/: index.html
bashir/css/: styles.css
bashir/js/: main.js
cli/: README.md  package.json
cli/scripts/: sync-assets.js  sync-assets.mjs  (+2 more)
demo-app/: package-lock.json  package.json
design-system/: APPROVED-REDESIGN-DECISIONS.md  HOMEPAGE-WIREFRAME-COPY-2026.md  MASTER.md  REDESIGN-BLUEPRINT-2026.md
docs/: andritz-design-system-plan.md  index.html  security-hardening-plan.md  三个 data-scripts-templates 的区别.md
house-of-meena/: CLAUDE.md
innstate/: package-lock.json  package.json
preview/: had-a-wreck-vintage-cream.html
scripts/: convert_symlinks.sh  regenerate_goldens.py  smoke-stacks.sh  sync-skill-assets.ps1  sync-skill-assets.sh  validate_generated_installs.py  validate_metadata.py  validate_sync.py  validate_templates.py
tests/: test_site_system.py  test_stack_discovery.py
website/: README.md
(+214 files in other folders)
